--- a/src/main/resources/com/example/muzeumfrontendjavafx/hello-view.fxml
+++ b/src/main/resources/com/example/muzeumfrontendjavafx/hello-view.fxml
@@ -1,16 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.muzeumfrontendjavafx.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.geometry.Insets?>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+       <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
+           <tabs>
+               <Tab text="Szobrok">
+                   <content>
+                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                               <VBox alignment="TOP_CENTER" layoutX="14.0" layoutY="14.0" prefHeight="640.0" prefWidth="770.0">
+                                   <children>
+                                       <HBox alignment="CENTER">
+                                           <children>
+                                               <Button mnemonicParsing="false"  prefHeight="30.0" prefWidth="150.0" text="Hozzáadás">
+                                                   <HBox.margin>
+                                                       <Insets left="25.0" right="25.0" />
+                                                   </HBox.margin>
+                                               </Button>
+                                               <Button mnemonicParsing="false"  prefHeight="30.0" prefWidth="150.0" text="Törlés">
+                                                   <HBox.margin>
+                                                       <Insets left="25.0" right="25.0" />
+                                                   </HBox.margin>
+                                               </Button>
+                                               <Button mnemonicParsing="false"  prefHeight="30.0" prefWidth="150.0" text="Módosítás">
+                                                   <HBox.margin>
+                                                       <Insets left="25.0" right="25.0" />
+                                                   </HBox.margin>
+                                               </Button>
+                                           </children>
+                                           <VBox.margin>
+                                               <Insets bottom="30.0" />
+                                           </VBox.margin>
+                                       </HBox>
+                                       <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                                           <columns>
+                                               <TableColumn prefWidth="255.0" text="Személy" />
+                                               <TableColumn prefWidth="255.0" text="Magasság" />
+                                               <TableColumn prefWidth="255.0" text="Ár" />
+                                           </columns>
+                                       </TableView>
+                                   </children>
+                               </VBox>
+                           </children></AnchorPane>
+                   </content>
+               </Tab>
+               <Tab text="Festmények">
+                   <content>
+                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                               <VBox alignment="TOP_CENTER" layoutX="14.0" layoutY="14.0" prefHeight="640.0" prefWidth="770.0">
+                                   <children>
+                                       <HBox alignment="CENTER">
+                                           <children>
+                                               <Button mnemonicParsing="false"  prefHeight="30.0" prefWidth="150.0" text="Hozzáadás">
+                                                   <HBox.margin>
+                                                       <Insets left="25.0" right="25.0" />
+                                                   </HBox.margin>
+                                               </Button>
+                                               <Button mnemonicParsing="false"  prefHeight="30.0" prefWidth="150.0" text="Törlés">
+                                                   <HBox.margin>
+                                                       <Insets left="25.0" right="25.0" />
+                                                   </HBox.margin>
+                                               </Button>
+                                               <Button mnemonicParsing="false"  prefHeight="30.0" prefWidth="150.0" text="Módosítás">
+                                                   <HBox.margin>
+                                                       <Insets left="25.0" right="25.0" />
+                                                   </HBox.margin>
+                                               </Button>
+                                           </children>
+                                           <VBox.margin>
+                                               <Insets bottom="30.0" />
+                                           </VBox.margin>
+                                       </HBox>
+                                       <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                                           <columns>
+                                               <TableColumn prefWidth="255.0" text="Cím" />
+                                               <TableColumn prefWidth="255.0" text="Év" />
+                                               <TableColumn prefWidth="255.0" text="Kiállítva" />
+                                           </columns>
+                                       </TableView>
+                                   </children>
+                               </VBox>
+                           </children>
+                       </AnchorPane>
+                   </content>
+               </Tab>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+           </tabs>
+       </TabPane>
+   </children>
 </VBox>
