--- a/src/main/resources/com/example/muzeumfrontendjavafx/hozzaadasSzobor-view.fxml
+++ b/src/main/resources/com/example/muzeumfrontendjavafx/hozzaadasSzobor-view.fxml
@@ -6,9 +6,32 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.muzeumfrontendjavafx.HozzaadasSzoborController"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<GridPane hgap="10.0" vgap="10.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.muzeumfrontendjavafx.HozzaadasSzoborController">
+    <columnConstraints>
+        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="200.0" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    </rowConstraints>
+    <children>
+        <TextField promptText="Személy" GridPane.columnIndex="1"/>
+        <Label text="Személy" />
+        <Label text="Magasság" GridPane.rowIndex="1" />
+        <Label text="Ár" GridPane.rowIndex="2" />
+        <Spinner editable="true"  minWidth="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2">
+            <valueFactory>
+                <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="10" max="999999999"  min="1" />
+            </valueFactory>
+        </Spinner>
+        <Button minWidth="100.0" mnemonicParsing="false" prefWidth="200.0" text="Hozzáad" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" />
+        <Spinner editable="true" prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" >
+            <valueFactory>
+                <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="10" max="99999999"  min="1" />
+            </valueFactory>
+        </Spinner>
+    </children>
+</GridPane>
